# awandb-core

./: .gitignore  AGENTS.md  HOWTO.md  NOTICE  README.md  Sament.md  benchmark_scaling_log.csv  build.sbt
.github/workflows/: release.yml
project/: plugins.sbt
src/main/cpp/: CMakeLists.txt  aggregation.cpp  avx_scan.cpp  bitpacking.cpp  block.h  buffer_pool.h  buffer_pool_jni.cpp  common.cpp  common.h  compaction.cpp  compute.cpp  cuckoo.h  cuckoo_jni.cpp  dictionary.cpp  engine.cpp  german_string.h  graph.cpp  hardware.cpp  join.cpp  query_context.cpp  query_context.h  sort.cpp  storage.cpp
src/main/scala/org/awandb/core/: MainApp.scala  SQLHandler.scala  SimpleSQL.scala
src/main/scala/org/awandb/core/engine/: AwanTable.scala  Compactor.scala  EngineManager.scala  EpochManager.scala  MemoryReleaser.scala  MorselExec.scala  QueryExecutor.scala
src/main/scala/org/awandb/core/engine/memory/: NativeMemoryTracker.scala
src/main/scala/org/awandb/core/flight/: ArrowAdapter.scala
src/main/scala/org/awandb/core/graph/: GraphTable.scala
src/main/scala/org/awandb/core/index/: CuckooFilter.scala
src/main/scala/org/awandb/core/ingest/: JsonShredder.scala
src/main/scala/org/awandb/core/jni/: NativeBridge.scala
src/main/scala/org/awandb/core/pipeline/: ContinuousPipeWorker.scala  PipeManager.scala
src/main/scala/org/awandb/core/query/: JoinOperator.scala  MaterializeOperator.scala  Operator.scala  ProjectOperator.scala  TableScanOperator.scala
src/main/scala/org/awandb/core/storage/: BlockManager.scala  NativeColumn.scala  Wal.scala
src/main/scala/org/awandb/core/util/: UnsafeHelper.scala
src/main/scala/org/awandb/server/: AwanDBInternalProfiler.scala  AwanFlightProducer.scala  AwanFlightServer.scala  AwanFlightSqlProducer.scala
src/main/scala/org/awandb/server/auth/: AwanAuthHandler.scala
src/main/scala/org/awandb/server/middleware/: FormatMiddleware.scala
src/test/cpp/: buffer_pool_test.cpp
src/test/scala/org/awandb/: AISqlSpec.scala  AdvancedSQLSpec.scala  AggregationAdvancedSpec.scala  AggregationSpec.scala  ArrowAdapterSpec.scala  AsyncPerformanceSpec.scala  AwanBulkEgressSpec.scala  AwanBulkIngressSpec.scala  AwanCRUDSpec.scala  AwanDBInternalProfilerTest.scala  AwanDBSpec.scala  AwanEgressPipelineSpec.scala  AwanFlightProducerSpec.scala  AwanFlightSqlTest.scala  AwanIngressPipelineSpec.scala  AwanLifecycleZeroCopySpec.scala  AwanSQLRegressionSpec.scala  AwanTableBugReproductionSpec.scala  AwanTableDataLossSpec.scala  AwanTableScanSpec.scala  BackgroundDaemonSpec.scala  BufferPoolEvictionSpec.scala  BufferPoolIntegrationSpec.scala  BufferPoolSpec.scala  CompactionSpec.scala  ComplexSQLSpec.scala  CompoundFilterSpec.scala  ConcurrencyAndPerformanceSpec.scala  ConcurrencySQLSpec.scala  ConcurrencySpec.scala  ConcurrentWorkloadSpec.scala  CuckooFilterIntegrationSpec.scala  CuckooFilterSpec.scala  DAGSpec.scala  DictionaryGroupByIntegrationSpec.scala  DictionarySpec.scala  DoPutStreamSpec.scala  EBMMRaceConditionSpec.scala  EpochManagerSpec.scala  ExtensiveConcurrencySpec.scala  (+41 more)
